# WhyLab-NeurIPS2026

./: .gitignore  CHANGELOG.md  Dockerfile  PROJECT_SPEC.md  README.md  README_ANON.md  ROADMAP.md  bootstrap_result.txt  build_submission.py  docker-compose.yml  e6_full_result.txt  pyproject.toml  pytest.ini  test_integration.py
.github/workflows/: ci.yml  deploy.yml
dashboard/: next.config.ts  package.json
dashboard/public/data/: latest.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/dashboard/causal-graph/: page.tsx
dashboard/src/components/: AnalysisSection.tsx  BenchmarkTable.tsx  CATEExplorer.tsx  ChatPanel.tsx  ConformalBand.tsx  DebateVerdict.tsx  DiagnosticsPanel.tsx  ExplainabilityPanel.tsx  OnboardingGuide.tsx  Sidebar.tsx  WhatIfSimulator.tsx
dashboard/src/types/: index.ts
docs/: architecture.md  benchmark.md  getting_started.md
docs/research/: causal_audit_strategy_v2.md  gemini_review_backlog.md
engine/: __init__.py  __main__.py  audit.py  cli.py  config.py  gpu_factory.py  main.py  orchestrator.py  pipeline.py  requirements.txt  tracing.py
engine/agents/: __init__.py  architect.py  causal_loop.py  dav_protocol.py  debate.py  director.py  discovery.py  literature_reviewer.py  llm_adapter.py  mac_discovery.py  tool_debate.py
engine/audit/: __init__.py  causal_auditor.py  decision_logger.py  drift_monitor.py  feedback_api.py  feedback_controller.py  lyapunov.py  matcher.py  orchestrator.py  outbox.py  schemas.py  sensitivity.py
engine/audit/llm_judge/: __init__.py  ares_evaluator.py  real_llm_judge.py
engine/audit/methods/: __init__.py  base.py  blame_attribution.py  causal_impact_method.py  dml_method.py  gsc_method.py  lightweight.py
engine/cells/: __init__.py  auto_causal_cell.py  base_cell.py  benchmark_cell.py  causal_cell.py  conformal_cell.py  counterfactual_cell.py  data_cell.py  debate_cell.py  deep_cate_cell.py  discovery_cell.py  dose_response_cell.py  explain_cell.py  export_cell.py  fairness_audit_cell.py  meta_learner_cell.py  quasi_experimental_cell.py  refutation_cell.py  report_cell.py  sensitivity_cell.py  temporal_causal_cell.py  viz_cell.py
engine/connectors/: __init__.py  base.py  bigquery_connector.py  csv_connector.py  factory.py  ga4_connector.py  ga4_quota_manager.py  knowledge_loader.py  sql_connector.py  supabase_connector.py
engine/data/: __init__.py  benchmark_data.py  steam_generator.py  test_scenario.csv
engine/deploy/: db_adapter.py  shadow.py
engine/monitoring/: __init__.py  alerter.py  drift_detector.py  scheduler.py
engine/paper/: draft_generator.py  saas_blueprint.py
engine/rag/: __init__.py  agent.py  loader.py  prompts.py  store.py
engine/sandbox/: __init__.py  executor.py
engine/scenarios/: personal_career_v2.py
engine/server/: README.md  __init__.py  mcp_server.py
engine/telemetry/: __init__.py  otel_setup.py
engine/tests/: __init__.py  test_causal_cell.py  test_data_cell.py  test_orchestrator.py
engine/utils/: reloader.py
engine/workflow/: __init__.py  graph.py
experiments/: audit_layer.py  config.yaml  e1_drift_detection.py  e2_sensitivity_filter.py  e4_agent_benchmark.py  e6_evalue_comparison.py  e6_nonstationary_agent.py  e9_llm_phase.py  e9_phase_diagram.py  e9_swebench_phase.py  llm_client.py  llm_providers.py
experiments/figures/: plot_e9_llm_multi.py
experiments/results/: e9_llm_phase.json  e9_phase_diagram.csv  e9_phase_diagram.json  e9_swebench_phase.json  e9_swebench_phase_checkpoint.json  e9_swebench_phase_episodes.csv  e9_swebench_phase_summary.csv  e_value_comparison.json
infra/sql/: 002_partitioning.sql
paper/: main.aux  main.bbl  main.blg  main.tex  references.bib
paper/reports/: causal_inference_report.md  white_paper.md
results/: benchmark_results.json
results/tables/: benchmark_table.tex
results_v2/: benchmark_results.json
results_v2/tables/: benchmark_table.tex
scripts/: generate_paper_plots.py  package_anonymous.py  package_submission.py  run_whylab.bat  start.bat  zenodo_upload.py
stats/: bootstrap_ci.py  generate_tab2.py  generate_tab4.py
submission/code/: __init__.py  audit_layer.py  config.yaml  e3a_stability.py  llm_client.py  pipeline.md  requirements-experiments.txt  requirements.txt
supabase/migrations/: 001_audit_schema.sql
tests/: test_agent_smoke.py  test_api.py  test_api_e2e.py  test_benchmark.py  test_benchmark_who_when.py  test_causal_flip.py  test_conformal.py  test_debate.py  test_deep_cate.py  test_discovery_auto.py  test_e2e_sprint5.py  test_lyapunov.py  test_meta_learners.py  test_otel.py  test_outbox_chaos.py  test_phase10.py  test_pipeline_e2e.py  test_rd_sprint1.py  test_refutation.py  test_shadow.py  test_tracing.py
tests/data/: external_test.csv
whylab/: __init__.py  api.py  server.py
