[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whylab"
version = "0.1.0"
description = "AI-Driven Causal Inference Engine with Multi-Agent Debate"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "WhyLab Contributors"},
]
keywords = ["causal-inference", "machine-learning", "ai-agents", "double-machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "econml>=0.14",
    "lightgbm>=4.0",
    "duckdb>=0.9",
    "shap>=0.42",
]

[project.optional-dependencies]
gpu = ["lightgbm[gpu]"]
dashboard = ["fastapi", "uvicorn"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = ["whylab[gpu,dashboard,dev]"]

[project.scripts]
whylab = "engine.pipeline:main"

[project.urls]
Homepage = "https://github.com/your-org/whylab"
Repository = "https://github.com/your-org/whylab"
Issues = "https://github.com/your-org/whylab/issues"

[tool.hatch.build.targets.wheel]
packages = ["engine", "whylab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
