[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whylab"
version = "0.1.0"
description = "Causal Decision Intelligence Engine with Multi-Agent Debate"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "WhyLab Contributors"},
]
keywords = ["causal-inference", "decision-intelligence", "machine-learning", "ai-agents", "double-machine-learning", "roi-simulator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "econml>=0.14",
    "lightgbm>=4.0",
    "duckdb>=0.9",
    "shap>=0.42",
]

[project.optional-dependencies]
gpu = ["lightgbm[gpu]"]
dashboard = ["fastapi", "uvicorn", "websockets"]
rag = ["chromadb>=0.4", "sentence-transformers>=2.2", "google-generativeai>=0.3"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = ["whylab[gpu,dashboard,rag,mcp,dev]"]

[project.scripts]
whylab = "engine.pipeline:main"

[project.urls]
Homepage = "https://github.com/Yesol-Pilot/WhyLab"
Repository = "https://github.com/Yesol-Pilot/WhyLab"
Issues = "https://github.com/Yesol-Pilot/WhyLab/issues"

[tool.hatch.build.targets.wheel]
packages = ["engine", "whylab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
