[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whylab"
version = "1.0.0"
description = "WhyLab: Causal Safety Monitoring Framework for Stable Agent Self-Improvement"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "WhyLab Contributors"},
]
keywords = ["causal-inference", "decision-intelligence", "machine-learning", "ai-agents", "double-machine-learning", "roi-simulator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "openai>=1.0",
    "google-generativeai>=0.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Yesol-Pilot/WhyLab"
Repository = "https://github.com/Yesol-Pilot/WhyLab"
Issues = "https://github.com/Yesol-Pilot/WhyLab/issues"

[tool.hatch.build.targets.wheel]
packages = ["engine", "whylab"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".venv/",
    ".git/",
    ".github/",
    ".agent/",
    ".gemini/",
    ".pytest_cache/",
    "__pycache__/",
    "node_modules/",
    "dashboard/.next/",
    "dashboard/out/",
    "dashboard/node_modules/",
    "dist/",
    "uploads/",
    "logs/",
    "*.db",
    "*.db-journal",
    "*.pyc",
    "*.egg-info/",
    "_diag.json",
    "*.tar.gz",
    "*.whl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
